<resources>
    <string name="app_name">Pek Regilocs</string>
    <string name="edit_message">Enter your username</string>
    <string name="button_send">Register</string>
    <string name="connect_mesage">Server IP address</string>
    <string name="button_connect">Connect</string>
    <string name="sendloc_message">Send Location</string>
    <string name="welcome">Welcome to PekRegilocs</string>
</resources>
